vchat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vchat
spec:
  selector:
    app: vchat
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
