vchat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vchat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            backend:
             service:
                name: vchat
                port:
                  number: 80
            path: /
